Modal z-index fix, forms first section fix

--- a/css/components/modal.css
+++ b/css/components/modal.css
@@ -11,6 +11,7 @@ Component describing styles for generic modal windows - reusable
 	right: 0;
 	top: 0;
 	visibility: visible;
+	z-index: 1000;
 }
 
 div.modal-courtain {
@@ -36,6 +37,7 @@ div.modal-courtain {
 .modal.visible {
 	display: block;
 	opacity:1;
+	z-index: 1000;
 }
 
 .modal header {
